# rust-bundler

./: Cargo.toml  README.md
src/: lib.rs  main.rs  utils.rs
tests/inputs/a/src/: lib.rs
tests/inputs/b/src/: c.rs  main.rs
tests/inputs/b/src/b/: a.rs  mod.rs
tests/inputs/b/src/c/: b.rs
