[package]
name = "rust-bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "parsing", "visit-mut"] }
quote = "1.0"
toml = "0.5"
